# code-challenge-2024-shashank-iitbhu

./: .gitignore  Cargo.toml  run.sh
solution/: Cargo.toml  output.txt
solution/src/: main.rs
src/: Cargo.toml  main.rs
src/src/: block.rs  main.rs
