[package]
name = "solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
crypto = "0.5.1"
crypto-hash = "0.3.4"
hex = "0.4.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
